# cplusplus-help

CMake/LibraryExample/: CMakeLists.txt
CMake/LibraryExample/cmake/: mylib-config.cmake.in
CMake/LibraryExample/include/mylib/: mylib.h
CMake/LibraryExample/src/: mylib.cpp
ClangTidy/: readme.txt
WorkWithQt/: my-configure-qt-5-15.sh  my-configure-qt-6-5-0.bat  my-configure-qt-6-5-0.sh
